--- a/app/src/main/res/layout/activity_visualizar_debito.xml
+++ b/app/src/main/res/layout/activity_visualizar_debito.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            app:tabTextColor="@android:color/white"/>
+            app:tabTextColor="@android:color/black"/>
 
 
     <androidx.viewpager.widget.ViewPager
