--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -18,7 +18,7 @@
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/primaryColor"
+            android:background="@android:color/white"
             android:paddingTop="?attr/actionBarSize"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
