--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -9,83 +9,208 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="8dp">
 
         <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardElevation="2dp"
-                app:cardUseCompatPadding="true">
-
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/chart_projecao_pagar_vs_receber"
-                    android:padding="16dp"
-                    android:textSize="18sp"/>
-
-            <com.github.mikephil.charting.charts.BarChart
-                    android:id="@+id/chart_bar"
-                    android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    android:layout_marginTop="70dp"/>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardElevation="2dp"
-                app:contentPadding="8dp"
-                app:cardUseCompatPadding="true">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardElevation="2dp"
+            app:cardUseCompatPadding="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/linearLayoutTotalReceber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:clipChildren="true"
+                >
+
+                <TextView
+                    android:id="@+id/button_data"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                <TextView android:id="@+id/button_data"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="4dp"
-                        android:layout_gravity="end"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/shape_button_rounded_accent"
-                        android:textColor="@color/primaryTextColor"
-                        android:textStyle="bold"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        android:text="Mês Ano"
-                        android:drawablePadding="4dp"
-                        android:drawableEnd="@drawable/calendar_range"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
+                    android:drawableEnd="@drawable/calendar_range"
+                    android:drawablePadding="4dp"
+                    android:gravity="center_vertical"
+                    android:padding="16dp"
+                    android:text="Mês Ano"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                        android:id="@+id/textViewTotalReceberLabel"
-                        android:layout_width="220dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/chart_total_a_receber_no_mes"
-                        android:visibility="gone"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:textSize="20sp" />
+                    android:id="@+id/textViewTotalReceberLabel"
+                    android:layout_width="220dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/chart_total_a_receber_no_mes"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:textSize="20sp" />
 
                 <TextView
-                        android:id="@+id/textViewTotalReceber"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:padding="8dp"
-                        android:visibility="gone"
-                        android:text="R$ 0,00"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textViewTotalReceberLabel"
-                        android:textSize="30sp" />
+                    android:id="@+id/textViewTotalReceber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:padding="8dp"
+                    android:visibility="gone"
+                    android:text="R$ 0,00"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewTotalReceberLabel"
+                    android:textSize="30sp" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardElevation="2dp"
+            app:cardUseCompatPadding="true">
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:orientation="vertical"
+                android:clipChildren="true"
+                android:padding="8dp"
+                >
+
+                <TextView android:id="@+id/textViewCardBalancete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Balancete"
+                    android:paddingBottom="16dp"
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <FrameLayout android:id="@+id/framelayout_progress_balancete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewCardBalancete" >
+
+                    <ProgressBar
+                        android:id="@+id/progress_balancete"
+                        android:layout_width="150dp"
+                        android:layout_height="100dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:indeterminate="false"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:progressDrawable="@drawable/circular"
+                        android:max="100"
+                        android:secondaryProgress="100"
+                        android:rotation="90"
+                        android:progress="0"
+                        android:min="0"/>
+
+                    <TextView
+                        android:id="@+id/textViewBalancetePorcento"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="0%"
+                        android:textColor="@color/primaryTextColor"
+                        android:textSize="14sp"/>
+
+                </FrameLayout>
+
+
+
+                <TextView
+                    android:id="@+id/textViewBalancete"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="R$ 0"
+                    android:textColor="@color/secondaryColor"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/framelayout_progress_balancete" />
+
+                <TextView
+                    android:id="@+id/textViewBalanceteLabel"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Lucro/Prejuizo"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewBalancete" />
+
+
+                <TextView
+                    android:id="@+id/textViewTotalReceitasLabel"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="Total em receitas"
+                    android:textSize="14sp"
+                    android:layout_marginTop="60dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textViewTotalReceitas"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="R$ 0"
+                    android:textSize="14sp"
+                    android:textColor="@color/secondaryColor"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewTotalReceitasLabel" />
+                <TextView
+                    android:id="@+id/textViewTotalDespesasLabel"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="Total em despesas"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewTotalReceitas"  />
+
+                <TextView
+                    android:id="@+id/textViewTotalDespesas"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="R$ 0"
+                    android:textSize="14sp"
+                    android:textColor="@color/margentaColor"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewTotalDespesasLabel" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="2dp"
+                app:cardUseCompatPadding="true"
+            >
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/chart_projecao_pagar_vs_receber"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="14sp"/>
+
+            <com.github.mikephil.charting.charts.BarChart
+                    android:id="@+id/chart_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_marginTop="50dp"/>
+
+        </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -94,17 +219,19 @@
                 app:cardUseCompatPadding="true">
 
             <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/chart_percentual_meios_pagamentos"
-                    android:padding="16dp"
-                    android:textSize="18sp"/>
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="14sp"/>
 
             <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/chart_total_meio_pag"
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
-                    android:layout_marginTop="70dp"/>
+                    android:layout_height="200dp"
+                    android:layout_marginTop="50dp"/>
 
         </androidx.cardview.widget.CardView>
 
@@ -116,17 +243,42 @@
                 app:cardUseCompatPadding="true">
 
             <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/chart_percentual_tipo_pagamento"
-                    android:padding="16dp"
-                    android:textSize="18sp" />
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="14sp"/>
 
             <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/chart_total_tipo_pag"
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
-                    android:layout_marginTop="70dp"/>
+                    android:layout_height="200dp"
+                    android:layout_marginTop="50dp"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardElevation="2dp"
+            app:cardUseCompatPadding="true">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Vendas por departamento"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="14sp"/>
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/chart_total_categoria"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginTop="50dp"/>
 
         </androidx.cardview.widget.CardView>
 
