--- a/app/src/main/res/layout/ano_mes_picker.xml
+++ b/app/src/main/res/layout/ano_mes_picker.xml
@@ -1,43 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnCount="2">
+        android:layout_height="wrap_content">
 
-        <TextView android:id="@+id/textViewAno"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center"
-                android:background="@color/primaryColor"
-                android:textColor="@color/secondaryTextColor"
-                android:padding="4dp"
-                android:layout_columnWeight="1"
-                android:text="Ano"/>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView android:id="@+id/textViewMes"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center"
-                android:background="@color/primaryColor"
-                android:textColor="@color/secondaryTextColor"
-                android:padding="4dp"
-                android:layout_columnWeight="1"
-                android:text="Mes"/>
+                <TextView android:id="@+id/textViewAno"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"
+                    android:textColor="@color/secondaryTextColor"
+                    android:padding="4dp"
+                    android:text="Ano"
+                    />
 
-        <NumberPicker android:id="@+id/numberpicker_ano"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_columnWeight="1"/>
+                <TextView android:id="@+id/textViewMes"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"
+                    android:textColor="@color/secondaryTextColor"
+                    android:padding="4dp"
+                    android:layout_columnWeight="1"
+                    android:text="Mes"/>
 
-        <NumberPicker android:id="@+id/numberpicker_mes"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_columnWeight="1"
-                android:layout_weight="1" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
-</GridLayout>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+                <NumberPicker android:id="@+id/numberpicker_ano"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal"/>
+
+                <NumberPicker android:id="@+id/numberpicker_mes"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+</androidx.appcompat.widget.LinearLayoutCompat>
