--- a/app/src/main/res/layout/recycler_view_item_cesta_alt.xml
+++ b/app/src/main/res/layout/recycler_view_item_cesta_alt.xml
@@ -130,7 +130,7 @@
             </LinearLayout>
 
             <TextView
-                    android:id="@+id/textViewSubtotal"
+                    android:id="@+id/textViewPrecoRevenda"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="bottom|end"
