--- a/app/src/main/res/layout/recycler_view_item_produto.xml
+++ b/app/src/main/res/layout/recycler_view_item_produto.xml
@@ -50,7 +50,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
             <TextView
-                    android:id="@+id/textViewSubtotal"
+                    android:id="@+id/textViewPrecoRevenda"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
