Melhorias tela de receitas e despesas

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,6 +11,11 @@
                 android:title="@string/menu_dash"/>
 
         <item
+            android:id="@+id/nav_venda"
+            android:icon="@drawable/cart"
+            android:title="@string/nova_venda"/>
+
+        <item
                 android:id="@+id/nav_clientes"
                 android:icon="@drawable/account_heart"
                 android:title="@string/menu_clientes"/>
