--- a/app/src/main/res/layout/activity_detalhe_parcela_debito.xml
+++ b/app/src/main/res/layout/activity_detalhe_parcela_debito.xml
@@ -20,12 +20,9 @@
                 android:textColor="@android:color/black"
                 android:textSize="14sp"
                 android:textAllCaps="true"
-                android:layout_marginBottom="8dp"
-                android:visibility="gone"
-                android:textStyle="bold"/>
+                android:layout_marginBottom="8dp"/>
 
-        <View   android:background="@android:color/black"
-                android:layout_width="match_parent"
+        <View   android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginBottom="8dp"/>
 
@@ -33,22 +30,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="8dp"
-                android:visibility="gone">
+                android:layout_marginBottom="8dp">
 
             <TextView
-                    android:id="@+id/textViewParcelaLabel"
+                    android:id="@+id/textViewDescricaoLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/parcela_label"
+                    android:text="@string/label_descricao"
                     android:textSize="14sp" />
 
             <TextView
-                    android:id="@+id/textViewObservacao"
+                    android:id="@+id/textViewDescricao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="1"
+                    android:text=""
                     android:textSize="14sp" />
 
         </LinearLayout>
@@ -104,14 +100,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Pagamento"
-                android:textColor="@android:color/black"
                 android:textSize="14sp"
                 android:textAllCaps="true"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="16dp"
-                android:textStyle="bold"/>
+                android:textColor="@android:color/black"/>
 
-        <View   android:background="@android:color/black"
+        <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginBottom="8dp"/>
@@ -121,6 +116,7 @@
                 android:checked="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/cinza_padrao_android"
                 android:text="Pagar Total"/>
 
 
@@ -128,7 +124,8 @@
                 android:id="@+id/textInputLayoutPagar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp">
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp">
 
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/textInputEditValorPagar"
@@ -145,7 +142,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Meio de Pagamento"
-                android:textColor="@color/secondaryTextColor"
                 android:layout_marginBottom="8dp"
                 android:textSize="14sp" />
 
