--- a/app/src/main/res/layout/recycler_view_item_promissoria.xml
+++ b/app/src/main/res/layout/recycler_view_item_promissoria.xml
@@ -24,7 +24,7 @@
                 android:maxLines="4"
                 android:textSize="14sp"/>
 
-        <TextView android:id="@+id/textViewObservacao"
+        <TextView android:id="@+id/textViewDescricao"
                 android:layout_width="0dp"
                 android:layout_weight="4"
                 android:layout_height="wrap_content"
