--- a/app/src/main/res/layout/recycler_view_item_promissoria_alt.xml
+++ b/app/src/main/res/layout/recycler_view_item_promissoria_alt.xml
@@ -13,30 +13,37 @@
             android:orientation="horizontal"
             android:paddingEnd="8dp">
 
-        <TextView
-                android:id="@+id/textViewVencimento"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:maxLines="4"
-                android:text="10\nJUL\n2020\nHH:mm"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:gravity="end"
+            android:orientation="vertical">
 
-        <TextView
-                android:id="@+id/textViewObservacao"
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/textViewDescricao"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:maxLines="4"
+                android:maxLines="2"
                 android:text="1º Parcela"
                 android:textAllCaps="true"
-                android:textSize="12sp" />
+                android:textSize="14sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                    android:id="@+id/textViewVencimento"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="4"
+                    android:text="10 JUL 2020 HH:mm"
+                    android:textSize="12sp"
+                     />
+        </LinearLayout>
 
         <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
+                android:layout_weight="3"
                 android:gravity="end"
                 android:orientation="vertical">
 
