--- a/app/src/main/res/layout/activity_cadastrar_produto.xml
+++ b/app/src/main/res/layout/activity_cadastrar_produto.xml
@@ -118,43 +118,25 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="Tabela de Preços"
-                    android:textAllCaps="true"
-                    android:textColor="@android:color/black"
-                    android:textSize="14sp" />
+            <com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/switchEstoqueNegativo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Permite estoque negativo"
+                android:padding="4dp"
+                android:checked="false"/>
 
             <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textInputLayoutPrecoTabela"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp">
+                android:id="@+id/textInputLayoutPrecoCusto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/textInputEditPrecoTabela"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Preço de Tabela"
-                        android:inputType="numberDecimal" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textInputLayoutPrecoCusto"
+                    android:id="@+id/textInputEditPrecoCusto"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/textInputEditPrecoCusto"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Preço de Custo"
-                        android:inputType="numberDecimal" />
+                    android:hint="Preço de Custo"
+                    android:inputType="numberDecimal" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
